<resources>
    <string name="app_name">FourFours</string>
    <string name="app_name_spaces">Four Fours</string>
    <string name="content_description">Logo for the Four Fours app</string>
    <string name="return_label">Return</string>
    <string name="about_label">About</string>
    <string name="start_label">Start</string>
    <string name="select_number_label">Select a Number</string>
    <string name="selected_number_label">Selected Num: </string>
    <string name="target_label">Target: </string>
    <string name="target_number_text">Target Number</string>

    <string name="enter_target_number_label">Enter Your Target Number</string>
    <string name="history_solved_label">History of Solved Numbers:\n</string>
    <string name="global_solves_label">Times Target Solved Globally:</string>
    <string name="completed_locally_label">Completed Locally?</string>

    <string name="priority_label">Priority:</string>
    <string name="temp_num">X</string>
    <string name="operation1_label">Operation 1\nLeft   |   Middle   |   Right</string>
    <string name="operation2_label">Operation 2\nPrevious + Middle Next   |   Right Half Together Next</string>
    <string name="compute_label">Compute</string>

    <string name="about_app">This is Four Fours, a simple math game where the hoal is to create any
        number you choose using a only 4 of number and a limited set of mathematical operations. Try
        to solve as many as possible, see how hard a number may be to get by checking out how many
        times the number has been gotten by everyone with the app as well.\n\n

        This app was created in under 24 hours at CodeDay Spring 2018 by Robert Marzec, with help
        from Joshua Garza. Some of the highlights include a local history of solved numbers, freedom to select
        whichever number you desire to solve, an *interesting* way to pull what operations need to be done
        in what order, an original logo, and an implementation of Firebase that allows for users to see
        the total number of times a given number has been solved.\n\n

        If this project at all interests you, feel free to check it out at my GitHub page (github.com/rjmarzec),
        and if you have any comments, questions, or concerns, don't be afraid to shoot me an email at robertmarzecj@gmail.com.
        \nI hope you enjoy!</string>
</resources>
